nytt endepunkt for status på saker
