# app/main/openapi.yaml
@@ -97,6 +97,45 @@ paths:
           description: Manglende URL / Person ikke funnet
         '500':
           description: Feil på tjeneste, meld fra og send med call-id
+  /sakerByFnr:
+    post:
+      summary: Hent alle AAP saker for personidentifikator
+      tags:
+        - saker
+      description: |-
+        Henter perioder med vedtak for en person innen gitte datointerval.
+      security:
+        - azure: [ ]
+      parameters:
+        - in: header
+          name: x-callid
+          description: En UUID konsumenten sender inn som brukes til videre logging og feilsøking.
+          schema:
+            type: string
+            format: uuid
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SakerRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SakerStatus'
+        '400':
+          description: Feil i request
+        '401':
+          description: Mangler/feil token
+        '403':
+          description: Ikke tilgang
+        '404':
+          description: Manglende URL / Person ikke funnet
+        '500':
+          description: Feil på tjeneste, meld fra og send med call-id
 components:
   schemas:
     PeriodeResponse:
@@ -115,6 +154,26 @@ components:
           description: Perioder med vedtak inkludert 11-17
           items:
             $ref: '#/components/schemas/PeriodeInkludert11_17'
+    SakerRequest:
+        type: object
+        properties:
+            personidentifikator:
+              type: string
+              description: Personnummeret til brukeren
+              example: 12345678901
+    SakerStatus:
+        type: object
+        properties:
+            sakId:
+              type: string
+              description: SakId
+              example: "<SakId>"
+            sakStatus:
+              type: string
+              description: SakStatus
+              example: "<SakStatus>"
+            periode:
+              $ref: '#/components/schemas/Periode'
     PeriodeInkludert11_17:
       type: object
       properties:
@@ -138,7 +197,7 @@ components:
           description: Fra dato for perioden
           example: 2021-01-01
         tilOgMedDato:
-          type: string
+          type: ['null', string]
           format: date
           nullable: true
           description: Til dato for perioden
